[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
lazy_static = "1.4"
num_enum = "0.5"
regex = "1.5"
reqwest = "0.11"
tokio = { version = "1.14", features = ["full"] }
